--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm Armand </h1>
-        <img src="images/profile.jpg" class="img-circle img-shadow" width="150px" alt="Armand Rougier" id="profile">
+        <img src="images/profile-picture.png" class="img-circle img-shadow" width="150px" alt="Armand Rougier" id="profile">
         <p>
         I love watching movies, video games, and I love travelling. I am an actual student at IÉSEG School of Management and my objective is to discover and to help all around the world.
         </p>
