--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Hello, I'm Armand </h1>
+        <h1>Hello, I'm Armand 😄</h1>
         <img src="images/profile-picture.png" class="img-circle img-shadow" width="150px" alt="Armand Rougier" id="profile">
         <p>
         I love watching movies, video games, and I love travelling. I am an actual student at IÉSEG School of Management and my objective is to discover and to help all around the world.
@@ -22,19 +22,19 @@
         <a href="http://lewagon.com" class="btn-blue" target="_blank">Discover Le Wagon</a>
       </div>
       <div class="card-white">
-        <h2>Cinema</h2>
+        <h2>Cinema 🎬</h2>
           <p>Cinema is my passion, I love watching movies and trying to discover how they have recorded and/or acted.</p>
       </div>
       <div class="card-white">
-        <h2>Vidéo Games</h2>
+        <h2>Vidéo Games 🎮</h2>
         <p>Video games are my hobby, playing with friends is one of my moments when I can chill out and not be stressed about other things.</p>
       </div>
       <div class="card-white">
-          <h2>Travelling</h2>
+          <h2>Travelling 🗺</h2>
           <p>I think that to discover the world and cultures is the best thing we can do in this world. It is so important and rewarding for me.</p>
       </div>
       <div class="card-white">
-        <h2>Follow me</h2>
+        <h2>Follow me 📲</h2>
         <ul class="list-inline">
           <li>
             <a href="https://www.facebook.com/armand.rougie" target="_blank">
